--- a/src/app/all-projects/all-projects.component.html
+++ b/src/app/all-projects/all-projects.component.html
@@ -1,6 +1,6 @@
 <h2>All Projects</h2>
 
-<div *ngFor="let project of projects" class="panel panel-default">
+<div *ngFor="let project of projects" (click)="goToDetailPage(project)" class="panel panel-default">
   <div class="panel-body">
     <h3><em>{{project.name}} <br> </em> {{project.description}} <br> by {{project.manager}} <br> {{project.category}} </h3>
   </div>
