add ability to retrieve data from from firebase

--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,3 +1,9 @@
-<p>
-  this project has id number: {{projectId}}
-</p>
+<div>
+  <h1>{{projectToDisplay.name}}</h1>
+  <h4><em>{{projectToDisplay.description}}</em></h4><br>
+  <p>{{projectToDisplay.category}}</p><br>
+  <h4>By: {{projectToDisplay.manager}}</h4><br>
+  <p>Goal: ${{projectToDisplay.amount}}</p><br>
+  <h3>About this Project:</h3><br>
+  <p>{{projectToDisplay.content}}</p><br>
+</div>
