add edit functionality

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -41,3 +41,7 @@
     </div>
     <button (click)="submitForm(newName.value, newDescription.value, newManager.value, newAmount.value, newContent.value, newCategory.value); newName.value=''; newDescription.value=''; newManager.value=''; newAmount.value=''; newContent.value=''; newCategory.value=''">Add</button>
 </div>
+
+<div>
+  <app-all-projects></app-all-projects>
+</div>
