--- a/src/app/all-projects/all-projects.component.html
+++ b/src/app/all-projects/all-projects.component.html
@@ -1,7 +1,12 @@
 <h2>All Projects</h2>
 
-<div *ngFor="let project of projects | async" (click)="goToDetailPage(project)" class="panel panel-default">
+<div *ngFor="let project of projects | async" class="panel panel-default">
   <div class="panel-body">
-    <h3><em>{{project.name}} <br> </em> {{project.description}} <br> by {{project.manager}} <br> {{project.category}} </h3>
+    <h3 (click)="goToDetailPage(project)"><em>{{project.name}} <br> </em> {{project.description}} <br> by {{project.manager}} <br> {{project.category}} </h3>
+    <div *ngIf="currentRoute === '/admin'">
+      {{project.description}}
+      <hr>
+      <app-edit-project [selectedProject]="project"></app-edit-project>
+    </div>
   </div>
 </div>
