--- a/src/app/all-projects/all-projects.component.html
+++ b/src/app/all-projects/all-projects.component.html
@@ -1,12 +1,21 @@
 <h2>All Projects</h2>
+<div>
+  <select (change)="onChange($event.target.value)">
+    <option value="allProjects" selected="selected">All Projects</option>
+    <option value="cookbooks">Cookbooks</option>
+    <option value="comics">Comics</option>
+    <option value="documentary">Documentary</option>
+  </select>
+</div>
 
-<div *ngFor="let project of projects | async" class="panel panel-default">
+<div *ngFor="let project of projects | async | category:filterByCategory" class="panel panel-default">
   <div class="panel-body">
-    <h3 (click)="goToDetailPage(project)"><em>{{project.name}} <br> </em> {{project.description}} <br> by {{project.manager}} <br> {{project.category}} </h3>
+    <h3 (click)="goToDetailPage(project)"><em>{{project.name}} <br> </em> {{project.description}} <br> by {{project.manager}} | Amount Funded So Far: $ {{project.amountfunded}} <br> {{project.category}} </h3>
     <div *ngIf="currentRoute === '/admin'">
       {{project.description}}
       <hr>
       <app-edit-project [selectedProject]="project"></app-edit-project>
     </div>
+    <button [routerLink]="['/fund-project']">Fund It!</button>
   </div>
 </div>
