--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,14 @@
     <div class="navbar-header">
       <a class="navbar-brand" routerLink="">Fund Crowder</a>
     </div>
+    <!-- <div>
+      <select (change)="onChange($event.target.value)">
+        <option value="allProjects" selected="selected">All Projects</option>
+        <option value="cookbooks">Cookbooks</option>
+        <option value="comics">Comics</option>
+        <option value="documentary">Documentary</option>
+      </select>
+    </div> -->
     <ul class="nav navbar-nav navbar-right">
       <li><a routerLink="about">About</a></li>
       <li><a routerLink="all-projects">See All Projects</a></li>
