allow each projecto the have the ability to be funded...code is not complete

--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -7,3 +7,5 @@
   <h3>About this Project:</h3><br>
   <p>{{(projectToDisplay | async).content}}</p><br>
 </div>
+<button>Fund It</button>
+<app-fund-project [project] = "projectToDisplay">Fund It!</app-fund-project>
